# irc-match-execute-bot

./: Cargo.toml  botconfig.toml
src/: main.rs
