[package]
name = "irc-bot"
version = "0.1.0"
authors = ["André Samuelsson <andresamuelsson94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.13.6"
regex = "1.3.4"
toml = "0.5.6"
serde = { version = "1.0.104", features = ["derive"] }
percent-encoding = "2.1.0"
notify = "5.0.0-pre.2"

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
